# UTM-Software_atlas

./: CMakeLists.txt  README.md  atlas  atlas.yaml  build.sh  chat.txt  test.cpp  vcpkg.json
.github/workflows/: build-dev-image.yml  ci.yml  dependencies.yml  docs.yml  performance.yml  release.yml  security.yml
ATLAS/: CMakeLists.txt  Constants.qml  qmldir
ATLAS/designer/: plugin.metainfo
ATLASContent/: App.qml  CMakeLists.txt  Screen01.ui.qml  SidebarButton.ui.qml
App/autogen/: environment.h
Contracts/Common/: Enums.xsd  Types.xsd
Libs/Core/communication/: CMakeLists.txt
Libs/Core/database/: CMakeLists.txt
Libs/Core/database/tests/: CMakeLists.txt
Libs/Interfaces/: CMakeLists.txt  IDrone.h
Libs/Services/drone/: CMakeLists.txt
Libs/UI/Common/include/: UITypes.h
Libs/UI/Components/include/: BaseWidget.h  CardFactory.h  CardWidget.h
apps/: CMakeLists.txt  README.md
apps/atlas/: README.md
deploy/docker/: Dockerfile.dev  docker-compose.dev.yml
docker/: README.md
docker/dev/: Dockerfile
docker/prod/: docker-compose.yml
docs/: README.md
sdk/: README.md
simulators/: README.md
tests/: README.md
tools/: README.md
